Tue Aug 07 11:55:53 CET 2007    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/tds/query.c: use table name for update

Tue Aug 07 11:19:33 CET 2007    Frediano Ziglio <freddy77_A_gmail_D_com>
	* include/tds.h src/odbc/odbc.c src/odbc/unittests/getdata.c:
	- fix bug #1758831
	- additional fixes and checks for SQLGetData

Tue Aug 07 10:29:55 CET 2007    Frediano Ziglio <freddy77_A_gmail_D_com>
	* doc/userguide.sgml: update links

Fri Aug 03 13:15:42 CET 2007    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/tds/config.c: lookup server name correctly for instances

Thu Aug 02 13:31:45 CET 2007    Frediano Ziglio <freddy77_A_gmail_D_com>
	* include/sqlfront.h: small compatiblity improve with ms

Fri Jul 13 18:56:56 CET 2007    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/odbc/unittests/getdata.c: portability fix

Thu Jul 12 16:31:05 CET 2007    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/odbc/odbc.c: fix for SQLGetData using empty fields
	* src/odbc/unittests/getdata.c:
	- improve test to catch previous problem

Sat Jul 07 19:55:30 CET 2007    Frediano Ziglio <freddy77_A_gmail_D_com>
	* m4/sprintf_i64_format.m4: improve portability

Sat Jul 07 19:09:59 CET 2007    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/odbc/odbc.c:
	- check cbValueMax in SQLGetData even if DM present

Tue Jul 03 17:12:04 CET 2007    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/odbc/unittests/compute.c src/odbc/unittests/tables.c:
	* src/odbc/unittests/typeinfo.c:
	- relax test for Sybase
	* src/tds/token.c: fix length computation

Tue Jul 03 15:37:03 CET 2007    Frediano Ziglio <freddy77_A_gmail_D_com>
	* include/tds.h src/ctlib/blk.c src/dblib/bcp.c src/dblib/dblib.c:
	* src/odbc/odbc.c src/tds/mem.c src/tds/token.c:
	- add table_column_name to read real column name (if available),
	  read from wire and use when needed

Sun Jul 01 12:10:31 CET 2007    Frediano Ziglio <freddy77_A_gmail_D_com>
	* include/tdsstring.h src/odbc/connectparams.c: